fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ src: url('/fonts/Lubalin/LubalinGraphStd-Medium.otf') format('opentype');
 	src: url('/fonts/helvneue/HelveticaNeueLTStd-Md.otf') format('opentype');
 }
 
+body{
+	overflow-x: hidden;
+}
+
 .jumbotron
 {
 	background: #1b1f30 url(../images/pattern.png) repeat 0 0;
